--- a/Style.css
+++ b/Style.css
@@ -5,9 +5,10 @@
     box-sizing: border-box;
 }
 .app{
+    
     height: 100vh;
     width: 100%;
-    background-color: #191919
+    background-image: url("Leigh.png");
     
 }
 h2{
@@ -85,7 +86,5 @@ transition: transform .4s;
 .button--yes:hover{
     transform: scale(1.2);
 }
-
-
 
 
