--- a/Style.css
+++ b/Style.css
@@ -8,7 +8,7 @@
     
     height: 100vh;
     width: 100%;
-    background-image: url("Leigh.png");
+    background-image: url("ikaw lang.png");
     
 }
 h2{
