--- a/Style.css
+++ b/Style.css
@@ -1,20 +1,22 @@
 *{
-    padding: 0%;
-    margin: 0%;
+    padding: 0;
+    margin: 0;
     font-family: 'Josefin Sans', sans-serif;
     box-sizing: border-box;
 }
 .app{
     
-    height: 100vh;
-    width: 100%;
-    background-image: url("shiela.png");
     
+    background-image: url("ikaw lang.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+    width: 400px;
 }
 h2{
 
     color: white;
-    font-size: 73px;
+    font-size: 75px;
     width: 1130px;
     margin: 30px auto;
     text-align: center;
@@ -70,7 +72,7 @@ transition: transform .4s;
 .button--no{
     height:3    5px;
     width: 80px;       
-    right: 45%;
+    right: 43%;
     border-radius: 20px;
     font-weight: bold;
 }
@@ -78,7 +80,7 @@ transition: transform .4s;
 .button--yes{
     height:3    5px;
     width: 80px;    
-    right: 54%;
+    right: 51%;
     font-weight: bold;
     border-radius: 20px;
     transition: transform .4s;
