--- a/Style.css
+++ b/Style.css
@@ -7,7 +7,7 @@
 .app{
     
     
-    background-image: url("beshie.png");
+    background-image: url("beshiess.png");
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
