--- a/beshiess.css
+++ b/beshiess.css
@@ -1,6 +1,12 @@
+
+span{
+    color: #A76F6F;
+}
 *{
     background-color: peachpuff;
+    font-family: 'Josefin Sans', sans-serif;
 }
+
 .container {
    
     display: flex;
@@ -9,17 +15,28 @@
     justify-content: center;
     height: 100vh;
   }
-  
+  h2{
+
+    color: rgb(39, 55, 77);
+    font-size: 75px;
+    width: 1130px;
+    margin: 30px auto;
+    text-align: center;
+    font-weight: bold;
+}
+
   .top-boxes,
   .bottom-boxes {
     display: flex;
   }
-  
+ 
+
   .box {
     width: 300px; /* Increased box width */
     height: 300px; /* Increased box height */
     perspective: 1000px;
     margin: 10px;
+   
   }
   
   .front,
@@ -29,6 +46,7 @@
     position: absolute;
     backface-visibility: hidden;
     transition: transform 0.5s;
+    border-radius: 20px;
   }
   
   .front {
@@ -37,6 +55,10 @@
     align-items: center;
     justify-content: center;
     font-size: 20px;
+    text-align: center;
+    font-weight: bold;
+    
+    
   }
   
   .back {
@@ -46,12 +68,9 @@
     align-items: center;
     justify-content: center;
     font-size: 20px;
+    text-align: center;
   }
 
-  
-
-
-  
   .box:nth-child(1) .back {
     background-color: #FF9B9B; /* Box 1 flipped color */
   }
@@ -79,4 +98,3 @@
   .box:hover .back {
     transform: rotateY(0deg);
   }
-  
