--- a/beshiess.css
+++ b/beshiess.css
@@ -1,100 +1,83 @@
-
-span{
-    color: #A76F6F;
+* {
+  font-family: 'Josefin Sans', sans-serif;
+  background-color: peachpuff;
 }
-*{
-    background-color: peachpuff;
-    font-family: 'Josefin Sans', sans-serif;
+
+span {
+  color: #A76F6F;
 }
 
 .container {
-   
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-  }
-  h2{
-
-    color: rgb(39, 55, 77);
-    font-size: 75px;
-    width: 1130px;
-    margin: 30px auto;
-    text-align: center;
-    font-weight: bold;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
-  .top-boxes,
-  .bottom-boxes {
-    display: flex;
-  }
+h2 {
+  color: rgb(39, 55, 77);
+  font-size: 75px;
+  width: 1130px;
+  margin: 30px auto;
+  text-align: center;
+  font-weight: bold;
+}
+
+.top-boxes,
+.bottom-boxes {
+  display: flex;
+}
+
+.box {
+  width: 300px;
+  height: 300px;
+  perspective: 1000px;
+  margin: 10px;
+}
+
+.front,
+.back {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  backface-visibility: hidden;
+  transition: transform 1s;
+  border-radius: 20px;
+}
+
+.front {
+  background-color: #FCAEAE;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.back {
+  transform: rotateY(180deg);
+  display: flex;
+  align-items: center; /* Center text vertically */
+  justify-content: center;
+  font-size: 20px;
+  text-align: center; /* Center text horizontally */
+  flex-direction: column;
+  padding: 5px;
+  background-color: #FF9B9B;
+}
+
+.back p{
+  background-color: #FF9B9B;
  
+}
 
-  .box {
-    width: 300px; /* Increased box width */
-    height: 300px; /* Increased box height */
-    perspective: 1000px;
-    margin: 10px;
-   
-  }
-  
-  .front,
-  .back {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    backface-visibility: hidden;
-    transition: transform 1s;
-    border-radius: 20px;
-  }
-  
-  .front {
-    background-color: #FCAEAE;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    text-align: center;
-    font-weight: bold;
-    
-    
-  }
-  
-  .back {
-    background-color: #ffa500;
-    transform: rotateY(180deg);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    text-align: center;
-  }
 
-  .box:nth-child(1) .back {
-    background-color: #FF9B9B; /* Box 1 flipped color */
-  }
-  
-  .box:nth-child(2) .back {
-    background-color: #FF9B9B; /* Box 2 flipped color */
-  }
-  
-  .box:nth-child(3) .back {
-    background-color: #FF9B9B; /* Box 3 flipped color */
-  }
-  
-  .box:nth-child(4) .back {
-    background-color: #FF9B9B; /* Box 4 flipped color */
-  }
-  
-  .box:nth-child(5) .back {
-    background-color: #FF9B9B; /* Box 5 flipped color */
-  }
-  
-  .box:hover .front {
-    transform: rotateY(180deg);
-  }
-  
-  .box:hover .back {
-    transform: rotateY(0deg);
-  }
+.box:hover .front {
+  transform: rotateY(180deg);
+}
+
+.box:hover .back {
+  transform: rotateY(0deg);
+}
