--- a/Style.css
+++ b/Style.css
@@ -1,54 +1,52 @@
-*{
+* {
     padding: 0;
     margin: 0;
     font-family: 'Josefin Sans', sans-serif;
     box-sizing: border-box;
-}
-.app{
-    
-    
+  }
+  
+  .app {
     background-image: url("beshiess.png");
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
     width: 400px;
-}
-h2{
-
+  }
+  
+  h2 {
     color: white;
     font-size: 75px;
-    width: 1130px;
-    margin: 30px auto;
+    width: 100%;
+    margin: 0;
+    padding-top: 30px;
     text-align: center;
     font-weight: bold;
-}
-span{
+  }
+  
+  
+  span {
     color: #f9004d;
-}
-
-
-
-
-input{
+  }
+  
+  input {
     position: absolute;
     display: flex;
-cursor: pointer;
-margin:  100px;
-padding: 10px 30px;
-background-color: rgb(255,203,164);
-border: 500px;
-
-}
-
-
-.app{
+    cursor: pointer;
+    margin: 100px;
+    padding: 10px 30px;
+    background-color: rgb(255, 203, 164);
+    border: 500px;
+  }
+  
+  .app {
     width: 100%;
     height: 100vh;
-
+    display: flex;
     justify-content: center;
-}
-
-.buttonGroup{
+    align-items: center;
+  }
+  
+  .buttonGroup{
     margin: 150px;
 
     }
@@ -66,13 +64,12 @@ font-weight: bold;
 padding: 10px 25px;
 border-radius: 30px     ;
 transition: transform .4s;
-
-
     }
-.button--no{
+  .button--no{
+    position: absolute;
     height:35px;
     width: 80px;       
-    right: 43.9%;
+    right: 39%;
     border-radius: 20px;
     font-weight: bold;
 }
@@ -80,13 +77,29 @@ transition: transform .4s;
 .button--yes{
     height:35px;
     width: 80px;    
-    right: 51%;
+    right: 52%;
     font-weight: bold;
     border-radius: 20px;
     transition: transform .4s;
 }
-.button--yes:hover{
+  .button--yes:hover {
     transform: scale(1.2);
-}
-
-
+  }
+  
+  .container {
+    position: relative;
+  }
+  
+  .random-gif {
+    position: absolute;
+    width: 200px;
+    height: 150px;
+    /* Add any other desired styling properties */
+  }
+  .yes-gif {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
