--- a/Style.css
+++ b/Style.css
@@ -6,7 +6,7 @@
   }
   
   .app {
-    background-image: url("beshiess.png");
+  background-color: black;
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
@@ -69,17 +69,18 @@ transition: transform .4s;
     position: absolute;
     height:35px;
     width: 80px;       
-    right: 39%;
-    border-radius: 20px;
+    right: 29%;
+    border-radius: 0px;
     font-weight: bold;
 }
 
 .button--yes{
+  position: absolute;
     height:35px;
     width: 80px;    
-    right: 52%;
+    right: 50%;
     font-weight: bold;
-    border-radius: 20px;
+    border-radius: 1px;
     transition: transform .4s;
 }
   .button--yes:hover {
